Backport some changes from 9.1 branch